// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stateful async tests > Merges skipped validations from previous suite 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "field_message_1",
      "path": [
        "field_1",
      ],
    },
  ],
  "pendingCount": 1,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [
        "field_message_1",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 1,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`Stateful async tests > Merges skipped validations from previous suite 2`] = `
{
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryItem {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
    SummaryItem {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "rejection_message_1",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "field_message_1",
      "path": [
        "field_1",
      ],
    },
    {
      "message": "rejection_message_1",
      "path": [
        "field_2",
      ],
    },
  ],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [
        "field_message_1",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 1,
      "errors": [
        "rejection_message_1",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
